# CPP-File-Stream-Library

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Headers/: ToolBox.h
Sources/ToolBox/: Files.cpp  Folders.cpp  Texts.cpp  ToolBox.cpp
